<resources>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="app_name" translatable="false">RZ</string>
    <string name="label_welcome">مرحبا</string>
    <string name="label_sign_in_sign_up">تسجيل الدخول / انشاء حساب</string>
    <string name="label_promotions">أحدث المنتجات</string>
    <string name="label_home">الرئيسية</string>
    <string name="label_profile">الصفحة الشخصية</string>
    <string name="label_my_orders">طلباتي</string>
    <string name="label_orders_received">الطلبات الواردة</string>
    <string name="label_create_product">اضافة منتج</string>
    <string name="label_my_products">منتجاتي</string>
    <string name="label_notifications">التنبيهات</string>
    <string name="label_about_us">من نحن</string>
    <string name="label_contact_us">اتصل بنا</string>
    <string name="label_privacy_policy">الخصوصية و شروط الخدمة</string>
    <string name="label_terms_amp_conditions">شروط الخدمة</string>
    <string name="label_logout">تسجيل الخروج</string>
    <string name="label_create_account">تسجيل حساب</string>
    <string name="label_have_account">أمتلك حساب بالفعل</string>
    <string name="label_login">تسجيل دخول</string>
    <string name="label_forget_password">هل نسيت كلمة المرور؟</string>
    <string name="label_have_no_account">لا تمتلك حساب</string>
    <string name="hint_user_name">الاسم</string>
    <string name="hint_email">البريد الالكتروني</string>
    <string name="hint_phone_number">رقم الجوال بدون 0</string>
    <string name="hint_password">كلمة المرور</string>
    <string name="hint_confirm_password">تأكيد كلمة المرور</string>
    <string name="error_phone_empty">حقل الهاتف فارغ.</string>
    <string name="error_invalid_phone">رقم الهاتف غير صحيح.</string>
    <string name="error_password_empty">كلمة السر فارغة.</string>
    <string name="error_password_min_char">كلمة السر اقل من 7 احرف.</string>
    <string name="error_name_empty">حقل الاسم فارغ.</string>
    <string name="error_email_empty">حقل البريد الالكتروني فارغ.</string>
    <string name="error_password_confirm_empty">حقل تاكيد كلمة السر فارغ.</string>
    <string name="error_password_confirm_min_char">تاكيد كلمة السر اقل من 7 احرف.</string>
    <string name="error_password_not_match">تاكيد كلمة السر لا تطابق معا كلمة السر.</string>
    <string name="error_general">حدث خطأ ما.</string>
    <string name="success_register">تم التسجيل بنجاح</string>
    <string name="success_login">تم تسجيل الدخول بنجاح</string>
    <string name="label_no_internet_connection">لا يوجد اتصال بالانترنت</string>
    <string name="label_category_name">الاقسام</string>
    <string name="label_sub_category_name">القسم الفرعي</string>
    <string name="label_product_name">اسم المنتج</string>
    <string name="hint_search">عن ماذا تبحث؟</string>
    <string name="cat_bottomappbar_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing
        elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus,
        sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor.
        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
        Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet,
        imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus. "
    </string>
    <string name="label_product_description">الوصف</string>
    <string name="label_order_product">طلب المنتج</string>
    <string name="success_log_out">تم تسجيل الخروج بنجاح</string>
    <string name="error_log_out">فشل تسجيل الخروج</string>
    <string name="label_phone_no_activation">تفعيل رقم الجوال</string>
    <string name="label_confirm">تاكيد</string>
    <string name="label_phone_verification_info">قم بادخال رمز التفعيل الذي تم ارساله الي الرقم %1$s</string>
    <string name="label_forget_password_info">من فضلك قم بادخال رقم الجوال الذي قمت بالتسجيل لدينا من خلاله</string>
    <string name="success_forget_password">تم ارسال كلمة السر الجديدة</string>
    <string name="error_forget_password">فشل في ارسال كلمة السر الجديدة</string>
    <string name="label_send_new_password">ارسال كلمة المرور الجديدة</string>
    <string name="label_add_pic">أضافة صورة</string>
    <string name="hint_address">ضع هنا اسم المنتج الخاص بك</string>
    <string name="hint_description">وضع وصف مناسب لمنتج مثل قاعة افراح وتجهيز حفلات</string>
    <string name="hint_price">السعر قبل الخصم (مثال 1000)</string>
    <string name="hint_currency">ريال سعودي</string>
    <string name="hint_price_with_discount">السعر بعد الخصم(مثال 500)</string>
    <string name="hint_product_quantity">المخزون(عدد الكمية من المنتج المتاحة مثلا 10)</string>
    <string name="label_pick_category">اختر القسم</string>
    <string name="label_pick_sub_category">اختر القسم الفرعي</string>
    <string name="label_confirm_create_product">تأكيد</string>
    <string name="label_add_attr_product">أضافة السمات</string>
    <string name="label_add_product">أضافة منتج</string>
    <string name="label_add_review">تقييم المنتج</string>
    <string name="label_your_rate">تقييمك للمنتج</string>
    <string name="hint_leave_review">اكتب تعليقك عن المنتج</string>
    <string name="label_confirm_review">تأكيد</string>
    <string name="hint_search_words">كلمات البحث</string>
    <string name="label_price">السعر</string>
    <string name="label_search">بحث</string>
    <string name="label_review_number">(%1$s)</string>
    <string name="label_product_currency">%1$s ريال سعودي</string>
    <string name="label_attributes">السمات(خصائص المنتج)</string>
    <string name="label_dates">الايام الغير متاحة</string>
    <string name="label_chip_text">%1$s | %2$s</string>
    <string name="label_empty_address">حقل العنوان فارغ</string>
    <string name="label_empty_description">حقل الوصف فارغ</string>
    <string name="label_empty_price">حقل السعر فارغ</string>
    <string name="label_empty_price_discount">حقل الخصم فارغ</string>
    <string name="label_empty_quantity">حقل المخزون فارغ</string>
    <string name="error_call_miniAds_api">خطأ في ارجاع الاعلانات</string>
    <string name="error_http_miniAds_api">خطأ في ارجاع الاعلانات</string>
    <string name="error_call_ad_api">خطأ في ارجاع تفاصيل الاعلان</string>
    <string name="error_http_ad_api">خطأ في ارجاع تفاصيل الاعلان</string>
    <string name="error_call_create_ad_api">خطأ في انشاء الاعلان</string>
    <string name="error_http_create_ad_api">خطأ في انشاء الاعلان</string>
    <string name="error_getting_ad">خطأ في ارجاع تفاصيل الاعلان</string>
    <string name="error_call_categories_api">خطأ في طلب الاقسام</string>
    <string name="error_http_categories_api">خطأ في طلب الاقسام</string>
    <string name="error_call_sliders_api">خطأ في طلب تنزيل الصور</string>
    <string name="error_http_sliders_api">خطأ في طلب تنزيل الصور</string>
    <string name="error_call_promotion_api">خطأ في تنزيل اخر العروض</string>
    <string name="error_http_promotion_api">خطأ في تنزيل اخر العروض</string>
    <string name="error_call_login_api">خطأ في تسجيل الدخول</string>
    <string name="error_http_login_api">خطأ في تسجيل الدخول</string>
    <string name="error_call_register_api">خطأ في انشاء حساب جديد</string>
    <string name="error_http_register_api">خطأ في انشاء حساب جديد</string>
    <string name="error_call_forgetPassword_api">خطأ في استرداد كلمة السر</string>
    <string name="error_http_forgetPassword_api">خطأ في استرداد كلمة السر</string>
    <string name="error_call_verifyPhone_api">خطأ في تفعيل رقم الهاتف</string>
    <string name="error_http_verifyPhone_api">خطأ في تفعيل رقم الهاتف</string>
    <string name="error_call_subCategory_api">خطأ في ارجاع الاقسام الفرعية</string>
    <string name="error_http_subCategory_api">خطأ في ارجاع الاقسام الفرعية</string>
    <string name="error_call_attributes_api">خطأ في طلب السمات</string>
    <string name="error_http_attributes_api">خطأ في طلب السمات</string>
    <string name="error_uploading_image">خطأ في رفع الصورة</string>
    <string name="error_sign_in_first">برجاء تسجيل الدخول اولا</string>
    <string name="label_sign_in">تسجيل الدخول</string>
    <string name="success_empty_view">يتعذر عرض المحتوي</string>
    <string name="label_try_again">اضغط لاعادة المحاولة مرة اخري</string>
    <string name="label_my_ads_title">أعلاناتي</string>
    <string name="success_delete_ad">تم حذف الاعلان بنجاح</string>
    <string name="error_delete_ad">فشل في حذف الاعلان</string>
    <string name="label_create_order_title">طلب الاعلان</string>
    <string name="hint_note">ملاحظات</string>
    <string name="label_make_order">طلب الاعلان</string>
    <string name="label_empty_notes">حقل الملاحظات فارغ</string>
    <string name="label_empty_name">حقل الاسم فارغ</string>
    <string name="label_empty_phone">حقل رقم الهاتف فارغ</string>
    <string name="success_create_order">تم طلب الاعلان بنجاح</string>
    <string name="error_create_order">فشل في طلب الاعلان</string>
    <string name="status_create_ad">جاري انشاء اعلاناك برجاء الانتظار.</string>
    <string name="status_edit_ad">جاري التعديل برجاء الانتظار.</string>
    <string name="label_paypal">باي بال</string>
    <string name="label_cash">كاش</string>
    <string name="label_my_orders_title">طلباتي</string>
    <string name="success_create_ad">تم انشاء اعلانك بنجاح</string>
    <string name="error_create_ad">فشل انشاء اعلانك</string>
    <string name="success_edit_ad">تم التعديل بنجاح</string>
    <string name="error_edit_ad">فشل التعديل</string>
    <string name="error_images_count">عدد الصور المسموح لا يزيد 10 صور.</string>
    <string name="error_select_image">يجب اختيار صورة واحدة علي الاقل.</string>
    <string name="create_ad_channel_name">Create Ad</string>
    <string name="create_ad_channel_desc">Progress of creating ad</string>
    <string name="edit_ad_channel_name">Edit Ad</string>
    <string name="edit_ad_channel_desc">Progress of editing ad</string>
    <string name="label_profile_title">الصفحة الشخصية</string>
    <string name="label_edit_profile_Info">تعديل</string>
    <string name="label_profile_notification">التنبيهات</string>
    <string name="label_date">الايام(الايام الغير متاح فيها الخدمة)</string>
    <string name="label_cancel_profile_Info">الغاء</string>
    <string name="label_save_profile_info">حفظ</string>
    <string name="label_reviews_title">التعليقات</string>
    <string name="label_order_details_title">تفاصيل الطلب</string>
    <string name="label_pay_order_details">ادفع</string>
    <string name="label_my_orders_received_title">الطلبات الواردة</string>
    <string name="label_received_order_details_title">تفاصيل الطلب</string>
    <string name="label_complete">تم التسليم</string>
    <string name="label_receive_money">استلام دفعة</string>
    <string name="label_date_order">التاريخ</string>
    <string name="label_status_order">الحالة</string>
    <string name="label_price_order">السعر الاساسي</string>
    <string name="label_paid_order">القيمة المدفوعة</string>
    <string name="label_remaining_order">القيمة المتبقية</string>
    <string name="label_note_order">ملاحظات</string>
    <string name="label_accept">قبول</string>
    <string name="label_refuse">رفض</string>
    <string name="label_pay_recived">استلام دفعة</string>
    <string name="hint_deposit">الدفعة</string>
    <string name="hint_refuse_reason">سبب الرفض</string>
    <string name="error_empty_deposit">حقل الدفعة فارغ</string>
    <string name="error_deposit_more_than_remaining">قيمة الدفعة اكثر من المتبقي</string>
    <string name="success_action">تمت العملية بنجاح</string>
    <string name="error_actoion">فشل في العملية برجاء المحاولة مرة اخري.</string>
    <string name="label_show_reviews">%1$s تعليقات</string>
    <string name="error_http_reviews_api">خطأ في ارجاع التعليقات</string>
    <string name="label_pay">ادفع</string>
    <string name="error_empty_reason">حقل السبب فارغ</string>
</resources>