<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.register.RegisterFragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/logoImgv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="44dp"
            android:src="@drawable/image_logo"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/userNameEt"
            app:layout_constraintTop_toBottomOf="@id/logoImgv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/hint_user_name"
            android:drawableStart="@drawable/ic_account"
            android:gravity="start"
            android:drawablePadding="8dp"
            android:inputType="text"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/emailEt"
            app:layout_constraintTop_toBottomOf="@id/userNameEt"
            app:layout_constraintStart_toStartOf="@id/userNameEt"
            app:layout_constraintEnd_toEndOf="@id/userNameEt"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_email"
            android:drawableStart="@drawable/ic_email_outline"
            android:gravity="start"
            android:drawablePadding="8dp"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNumberEt"
            app:layout_constraintTop_toBottomOf="@id/emailEt"
            app:layout_constraintStart_toStartOf="@id/userNameEt"
            app:layout_constraintEnd_toEndOf="@id/userNameEt"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_phone_number"
            android:drawableStart="@drawable/ic_phone"
            android:gravity="start"
            android:drawablePadding="8dp"
            android:inputType="phone"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/passwordEt"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberEt"
            app:layout_constraintStart_toStartOf="@id/userNameEt"
            app:layout_constraintEnd_toEndOf="@id/userNameEt"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_password"
            android:drawableStart="@drawable/ic_password"
            android:gravity="start"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPasswordEt"
            app:layout_constraintTop_toBottomOf="@id/passwordEt"
            app:layout_constraintStart_toStartOf="@id/userNameEt"
            app:layout_constraintEnd_toEndOf="@id/userNameEt"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_confirm_password"
            android:drawableStart="@drawable/ic_password"
            android:gravity="start"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/createAccountBtn"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordEt"
            app:layout_constraintStart_toStartOf="@id/userNameEt"
            app:layout_constraintEnd_toEndOf="@id/userNameEt"
            android:layout_marginTop="12dp"
            android:text="@string/label_create_account"/>

        <TextView
            android:id="@+id/haveAccountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/createAccountBtn"
            app:layout_constraintStart_toStartOf="@id/createAccountBtn"
            android:text="@string/label_have_account"
            android:textSize="16sp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            />

        <TextView
            android:id="@+id/loginTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/createAccountBtn"
            app:layout_constraintStart_toEndOf="@id/haveAccountTv"
            app:layout_constraintTop_toTopOf="@id/haveAccountTv"
            android:text="@string/label_login"
            android:textSize="16sp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorPrimary"
            android:padding="8dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

