<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.login.LoginFragment"
    android:id="@+id/rootViewSv">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logoImgv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="54dp"
            android:src="@drawable/image_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/userNameEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="8dp"
            android:gravity="start"
            android:hint="@string/hint_phone_number"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImgv" />

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="8dp"
            android:gravity="start"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/userNameEt"
            app:layout_constraintStart_toStartOf="@id/userNameEt"
            app:layout_constraintTop_toBottomOf="@id/userNameEt" />

        <TextView
            android:id="@+id/forgetPassTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/label_forget_password"
            app:layout_constraintEnd_toEndOf="@id/passwordEt"
            app:layout_constraintTop_toBottomOf="@id/passwordEt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_login"
            app:layout_constraintEnd_toEndOf="@id/userNameEt"
            app:layout_constraintStart_toStartOf="@id/userNameEt"
            app:layout_constraintTop_toBottomOf="@id/forgetPassTv" />

        <TextView
            android:id="@+id/haveNoAccountEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:text="@string/label_have_no_account"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/loginBtn"
            app:layout_constraintTop_toBottomOf="@id/loginBtn" />

        <TextView
            android:id="@+id/createAccountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:text="@string/label_create_account"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/haveNoAccountEt"
            app:layout_constraintTop_toBottomOf="@id/createAccountBtn"
            app:layout_constraintTop_toTopOf="@id/haveNoAccountEt" />

        <FrameLayout
            android:id="@+id/loadingFl"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorScrim"
            android:elevation="2dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="16dp"
                app:contentPadding="8dp">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </com.google.android.material.card.MaterialCardView>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
